# chat2dashboard

./: .gitignore  README.md
backend/: .env  README.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start.py  test.py
backend/app/: config.py  main.py
backend/app/api/v1/: database.py  document.py  knowledge_base.py  logs.py  routes.py  schema.py  search.py  system.py  visualization.py
backend/app/core/: agent.py  database.py  exceptions.py  kb_builder.py  logging.py  logging_example.py  sql_generator.py
backend/app/core/dbagent/: document_processor.py  knowledge_base.py  knowledge_graph.py  retrieval_system.py  vector_processor.py
backend/app/core/graph/: README.md  __init__.py  exported_knowledge_graph.graphml  relations.py
backend/app/core/graph/builders/: __init__.py  lightrag_builder.py
backend/app/core/graph/examples/: __init__.py  lightrag_example.py
backend/app/core/graph/extractors/: __init__.py  entity_extractor.py
backend/app/core/html_generator/: chart_generator.py  config.py  generator.py  models.py
backend/app/models/: requests.py  responses.py
backend/app/services/: agent_service.py  logging_service.py  sql_service.py  visualization_service.py
backend/app/utils/: chart_utils.py  data_converter.py
backend/databases/bank/: schema.json
backend/databases/bank/cache/: chroma.sqlite3
backend/src/: html_generator.py  nlp_processor.py  utils.py
backend/src/dbagent/agents/: base.py
backend/src/dbagent/html_generator/: __init__.py  test_generator.py
backend/templates/: index.html
backend/tests/: README.md  conftest.py  demo_knowledge_base.py
backend/tests/api/v1/: test_database.py  test_document.py  test_knowledge_base.py  test_logs.py  test_schema.py  test_search.py  test_system.py  test_visualization.py
docs/: design.md  (+5 more)
(+63 files in other folders)
