[project]
name = "data-vis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "psutil>=7.0.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
]
