[project]
name = "data-vis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "psutil>=7.0.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "tiktoken>=0.9.0",
    "openai>=1.97.1",
    "tenacity>=9.1.2",
    "vanna[chromadb,openai]>=0.7.9",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.14.1",
    "aiofiles>=24.1.0",
    "lightrag-hku>=1.4.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]
